--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
-    <title>Dope - Creative Multipurpose HTML Template</title>
+    <title>Fast IT Bangladesh - Make sure service and quality</title>
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700" rel="stylesheet">
 
@@ -52,7 +52,7 @@ CSS
 
                         <!-- Logo -->
                         <a class="nav-brand" href="index.html">
-                            <img src="img/logo.png" alt="">
+                            <img src="img/weblogo.png" alt="">
                         </a>
 
                         <!-- Navbar Toggler -->
@@ -111,10 +111,9 @@ CSS
         <div class="container">
             <div class="row align-items-center fullscreen">
                 <div class="col-md-6 banner-left">
-                    <h1>Hi, We Are <br> <span>Dope Agency.</span></h1>
-                    <p>Ultimate solution to make stunning mobile app landing around the world. Lorem ipsum dolor, sit
-                        amet consectetur
-                        adipisicing. </p>
+                    <h1>Hi, We Are <br> <span>Fast-IT</span></h1>
+                    <p>We provide one-stop solution for website design, Web development, UI/UX design, mobile applications, Graphic design and Digital Marketing. With experienced developers and designers, we are a powerful team who can build solutions that will not only drive traffics to your website but will increase conversion and sales.
+                    </p>
                     <a class="video-btn primary-btn" href="about-us.html">About More</a>
                 </div>
             </div>
@@ -133,11 +132,7 @@ CSS
                     <h3>About Us</h3>
                     <h1>All the Thinks you Need to know About Us</h1>
                     <p>
-                        But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain
-                        was born and I will give you
-                        a complete account of the system, and expound the actual teachings of the great explorer of the
-                        truth,
-                        the master-builder of human happiness.
+                        We are a team of expert IT consultants. Our expert engineers are always ready to serve all of your technology requirements. We always keep in touch with our clients and works to get the choice of individual people. We are best it company in Bangladesh
                     </p>
                     <a class="primary-btn" href="about-us.html">Know More</a>
                 </div>
@@ -180,7 +175,7 @@ CSS
         <div class="container">
             <div class="row align-items-center feature-wrap">
                 <div class="col-lg-4 header-left">
-                    <h1>
+                    <h1 class="text-white">
                         Our
                         <br> Process To Get Things Next Level
                     </h1>
@@ -252,20 +247,18 @@ CSS
                 <div class="col-lg-4  col-md-6 pb-30">
                     <div class="single-service">
                         <i class="ti-user"></i>
-                        <h4>Executive Admin</h4>
+                        <h4>Web Design</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid vel ipsum voluptas
-                            molestias.
+                            We offer professional web design services at affordable rates to help your business attract more visitors and keep them on your site!
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4  col-md-6 pb-30">
                     <div class="single-service">
                         <i class="ti-announcement"></i>
-                        <h4>Marketing Social Media</h4>
+                        <h4>Web Development</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid vel ipsum voluptas
-                            molestias.
+                         Our excellent web development experiences help to provide world-class quality with eye-catching web page design and development.
                         </p>
                     </div>
                 </div>
