Fast it website work started services added

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@ CSS
                                         <a href="#feature-section">Feature</a>
                                     </li>
                                     <li>
+                                        <a href="#our_services">Services</a>
+                                    </li>
+                                    <li>
                                         <a href="#testimonial-section">Testimonial</a>
                                     </li>
                                     <li>
@@ -237,7 +240,7 @@ CSS
     <!-- End feature section -->
 
     <!-- Start service section -->
-    <section class="service-section section-gap-full">
+    <section class="service-section section-gap-full" id="our_services">
         <div class="container">
             <div class="section-title">
                 <h2 class="text-center">Our Service</h2>
@@ -251,6 +254,7 @@ CSS
                         <p>
                             We offer professional web design services at affordable rates to help your business attract more visitors and keep them on your site!
                         </p>
+                        <a href="">more...</a>
                     </div>
                 </div>
                 <div class="col-lg-4  col-md-6 pb-30">
@@ -260,46 +264,48 @@ CSS
                         <p>
                          Our excellent web development experiences help to provide world-class quality with eye-catching web page design and development.
                         </p>
+                        <a href="">more...</a>
                     </div>
                 </div>
                 <div class="col-lg-4  col-md-6 pb-30">
                     <div class="single-service">
                         <i class="ti-bar-chart"></i>
-                        <h4>Project Management</h4>
+                        <h4>WordPress Design</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid vel ipsum voluptas
-                            molestias.
+                            With our focus on WordPress development, you can rest assured that our team is well-versed in the best practices and newest features.
                         </p>
+                        <a href="">more...</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 ">
                     <div class="single-service">
                         <i class="ti-palette"></i>
-                        <h4>Design Service</h4>
+                        <h4>UI/UX Design</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid vel ipsum voluptas
-                            molestias.
+                            
+User Interface (UI) and User Experience (UX) design is a most important part of website. It defines, how users interacts in website
                         </p>
+                        <a href="">more...</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 ">
                     <div class="single-service">
                         <i class="ti-agenda"></i>
-                        <h4>Book Keeping</h4>
+                        <h4>Graphic Design</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid vel ipsum voluptas
-                            molestias.
+                            Whether you're looking for a new logo or some flyers, the talented global community of designers at we can make it happen.
                         </p>
+                        <a href="">more...</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 ">
                     <div class="single-service">
                         <i class="ti-pencil-alt"></i>
-                        <h4>Writing & Editing</h4>
+                        <h4>Digital Marketing</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid vel ipsum voluptas
-                            molestias.
+                            Any kinds of Digital Marketing works such as SEO, SEM, SMM, Email Marketing, SMS Marketing, Facebook Marketing and so on.
                         </p>
+                        <a href="">more...</a>
                     </div>
                 </div>
 
