Fast it website work started team

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@ CSS
                                         <a href="#our_services">Services</a>
                                     </li>
                                     <li>
+                                        <a href="#our_team">Our Team</a>
+                                    </li>
+                                    <li>
                                         <a href="#testimonial-section">Testimonial</a>
                                     </li>
                                     <li>
@@ -505,7 +508,7 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
     <!-- End portfolio section -->
 
     <!-- Start team section -->
-    <section class="team-section section-gap-full">
+    <section class="team-section section-gap-full" id="our_team">
         <div class="container">
             <div class="section-title">
                 <h2 class="text-center">Our Team</h2>
