--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@ CSS
             <div class="row">
                 <div class="col-lg-4  col-md-6 pb-30">
                     <div class="single-service">
-                        <i class="ti-user"></i>
+                        <!-- <i class="ti-user"></i> -->
+                        <div class="text-center"><img src="img/web-design.png" width="200px" height="200px" alt="" srcset=""></div>
                         <h4>Web Design</h4>
                         <p>
                             We offer professional web design services at affordable rates to help your business attract more visitors and keep them on your site!
@@ -262,7 +263,8 @@ CSS
                 </div>
                 <div class="col-lg-4  col-md-6 pb-30">
                     <div class="single-service">
-                        <i class="ti-announcement"></i>
+                        <!-- <i class="ti-announcement"></i> -->
+                        <div class="text-center"><img src="img/web-development.png" width="200px" height="200px" alt="" srcset=""></div>
                         <h4>Web Development</h4>
                         <p>
                          Our excellent web development experiences help to provide world-class quality with eye-catching web page design and development.
@@ -272,7 +274,8 @@ CSS
                 </div>
                 <div class="col-lg-4  col-md-6 pb-30">
                     <div class="single-service">
-                        <i class="ti-bar-chart"></i>
+                        <!-- <i class="ti-bar-chart"></i> -->
+                        <div class="text-center"><img src="img/wordpress.png" width="200px" height="200px" alt="" srcset=""></div>
                         <h4>WordPress Design</h4>
                         <p>
                             With our focus on WordPress development, you can rest assured that our team is well-versed in the best practices and newest features.
@@ -282,7 +285,8 @@ CSS
                 </div>
                 <div class="col-lg-4 col-md-6 ">
                     <div class="single-service">
-                        <i class="ti-palette"></i>
+                        <!-- <i class="ti-palette"></i> -->
+                        <div class="text-center"><img src="img/ui-ux-design.png" width="200px" height="200px" alt="" srcset=""></div>
                         <h4>UI/UX Design</h4>
                         <p>
                             
@@ -293,7 +297,8 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                 </div>
                 <div class="col-lg-4 col-md-6 ">
                     <div class="single-service">
-                        <i class="ti-agenda"></i>
+                        <!-- <i class="ti-agenda"></i> -->
+                        <div class="text-center"><img src="img/graphic-design.png" width="200px" height="200px" alt="" srcset=""></div>
                         <h4>Graphic Design</h4>
                         <p>
                             Whether you're looking for a new logo or some flyers, the talented global community of designers at we can make it happen.
@@ -303,7 +308,8 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                 </div>
                 <div class="col-lg-4 col-md-6 ">
                     <div class="single-service">
-                        <i class="ti-pencil-alt"></i>
+                        <!-- <i class="ti-pencil-alt"></i> -->
+                        <div class="text-center"><img src="img/digital-marketing.png" width="200px" height="200px" alt="" srcset=""></div>
                         <h4>Digital Marketing</h4>
                         <p>
                             Any kinds of Digital Marketing works such as SEO, SEM, SMM, Email Marketing, SMS Marketing, Facebook Marketing and so on.
@@ -345,7 +351,7 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                     <div class="prog_container">
                         <div class="prog_text">
                             <span class="title">
-                                gulp
+                                Php, Laravel
                             </span>
                             <span class="precent" style="left:95%">95%</span>
                         </div>
@@ -358,12 +364,12 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                     <div class="prog_container">
                         <div class="prog_text">
                             <span class="title">
-                                sass
+                                React, Vue, Js
                             </span>
-                            <span class="precent" style="left:99%">99%</span>
+                            <span class="precent" style="left:79%">79%</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 99%;" aria-valuenow="99"
+                            <div class="progress-bar" role="progressbar" style="width: 79%;" aria-valuenow="79"
                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
@@ -371,7 +377,7 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                     <div class="prog_container">
                         <div class="prog_text">
                             <span class="title">
-                                vue js
+                                Ajax, Rest API
                             </span>
                             <span class="precent" style="left:75%">75%</span>
                         </div>
@@ -380,6 +386,19 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
+                    <div class="prog_container">
+                        <div class="prog_text">
+                            <span class="title">
+                                MySQL, Firebase
+                            </span>
+                            <span class="precent" style="left:75%">89%</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 89%;" aria-valuenow="89"
+                                aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+
 
                 </div>
                 <div class="col-lg-6 skill-right">
