founder add team

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
             <div class="row">
                 <div class="team-carusel  owl-carousel" id="team-carusel">
                     <div class="single-team item">
-                        <img class="img-fluid" src="img/profile2.png" alt="">
+                        <img class="img-fluid" src="img/profile2.jpg" alt="">
                         <div class="team-content">
                             <h4>Md Riazul Islam</h4>
                             <h6 class="text-white">Founder & Chairman</h6>
@@ -560,9 +560,10 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                         </div>
                     </div>
                     <div class="single-team item">
-                        <img class="img-fluid" src="img/team2.jpg" alt="">
+                        <img class="img-fluid" src="img/arif.jpg" alt="">
                         <div class="team-content">
-                            <h4>Philipe Cavalcante</h4>
+                            <h4>Md Ariful Islam</h4>
+                            <h6 class="text-white">Chief Technology Officer</h6>
                             <ul>
                                 <li>
                                     <a href="#">
@@ -583,9 +584,10 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                         </div>
                     </div>
                     <div class="single-team item">
-                        <img class="img-fluid" src="img/team3.jpg" alt="">
+                        <img class="img-fluid" border-radius="30px" src="img/noman.jpg" alt="">
                         <div class="team-content">
-                            <h4>Cristian Newman</h4>
+                            <h4>Md Noman</h4>
+                            <h6 class="text-white">Software Engineer</h6>
                             <ul>
                                 <li>
                                     <a href="#">
@@ -606,9 +608,10 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                         </div>
                     </div>
                     <div class="single-team item">
-                        <img class="img-fluid" src="img/team4.jpg" alt="">
+                        <img class="img-fluid" src="img/gfari.jpg" alt="">
                         <div class="team-content">
-                            <h4>Conor Sexton</h4>
+                            <h4>Md Gifari</h4>
+                            <h6 class="text-white">Software Engineer</h6>
                             <ul>
                                 <li>
                                     <a href="#">
@@ -629,9 +632,10 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                         </div>
                     </div>
                     <div class="single-team item">
-                        <img class="img-fluid" src="img/team5.jpg" alt="">
+                        <img class="img-fluid" src="img/shorif.jpg" alt="">
                         <div class="team-content">
-                            <h4>Pete Bellis</h4>
+                            <h4>Md Shoriful Islam</h4>
+                            <h6 class="text-white">Head of Promotion</h6>
                             <ul>
                                 <li>
                                     <a href="#">
@@ -652,9 +656,10 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                         </div>
                     </div>
                     <div class="single-team item">
-                        <img class="img-fluid" src="img/team6.jpg" alt="">
+                        <img class="img-fluid" src="img/kabir.jpg" alt="">
                         <div class="team-content">
                             <h4>Tanja Heffner</h4>
+                            <h6 class="text-white">Sr. Graphics Designer</h6>
                             <ul>
                                 <li>
                                     <a href="#">
