founder add team all

--- a/index.html
+++ b/index.html
@@ -680,9 +680,10 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                         </div>
                     </div>
                     <div class="single-team item">
-                        <img class="img-fluid" src="img/team1.jpg" alt="">
+                        <img class="img-fluid" src="img/sharif.jpg" alt="">
                         <div class="team-content">
-                            <h4>Foto Sushi</h4>
+                            <h4>Md Shariful Islam</h4>
+                            <h6 class="text-white">Sr. Software Engineer</h6>
                             <ul>
                                 <li>
                                     <a href="#">
@@ -703,9 +704,10 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                         </div>
                     </div>
                     <div class="single-team item">
-                        <img class="img-fluid" src="img/team2.jpg" alt="">
+                        <img class="img-fluid" src="img/asad.jpg" alt="">
                         <div class="team-content">
-                            <h4>Philipe Cavalcante</h4>
+                            <h4>Asad Siraji</h4>
+                            <h6 class="text-white">Sr. software Engineer</h6>
                             <ul>
                                 <li>
                                     <a href="#">
@@ -726,9 +728,10 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                         </div>
                     </div>
                     <div class="single-team item">
-                        <img class="img-fluid" src="img/team3.jpg" alt="">
+                        <img class="img-fluid" src="img/nahid.jpg" alt="">
                         <div class="team-content">
-                            <h4>Cristian Newman</h4>
+                            <h4>Nahid Bulbul</h4>
+                            <h6 class="text-white">MERN Stack Developers</h6>
                             <ul>
                                 <li>
                                     <a href="#">
@@ -867,7 +870,7 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
     <!-- End testimonial section -->
 
     <!-- Start blog section -->
-    <section class="blog-section" id="blog-section">
+    <!-- <section class="blog-section" id="blog-section">
         <div class="container blog-wrap section-gap-full">
             <div class="section-title">
                 <h2 class="text-center">Our Recent Writings</h2>
@@ -936,7 +939,7 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                 <a href="blog.html" class="primary-btn">Read More</a>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End blog section -->
 
     <!-- Start clients section -->
@@ -962,12 +965,12 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                 </div>
                 <div class="col-lg-5 col-md-6">
                     <a href="mailto:Support@dometheme.com.bd">
-                        <h3><i class="ti-email"></i> Support@dometheme.com.bd</h3>
+                        <h3><i class="ti-email"></i> info@fastitbd.com</h3>
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <a href="tel:880174230987">
-                        <h3><i class="ti-mobile"></i>880174230987</h3>
+                        <h3><i class="ti-mobile"></i>8801722754100</h3>
                     </a>
                 </div>
             </div>
@@ -1014,11 +1017,11 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
             <div class="row align-items-center">
                 <div class="col-lg-5 footer-left">
                     <a href="#">
-                        <img src="img/logo-w.png" alt="">
+                        <img src="img/weblogo.png" alt="">
                     </a>
-                    <p class="copyright-text">&copy; 2018 Design With
+                    <p class="copyright-text">&copy; 2021 Design With
                         <i class="fa fa-heart" aria-hidden="true"></i> By
-                        <a href="http://dopetheme.com" target="_blank">Dope Theme</a>
+                        <a href="http://riaz.fastitbd.com" target="_blank"> Md Riazul Islam</a>
                     </p>
                 </div>
                 <div class="col-lg-7">
