site almost ready

--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@ CSS
                                     <li>
                                         <a href="#testimonial-section">Testimonial</a>
                                     </li>
+                                    <li>
+                                        <a href="#contact">Contact</a>
+                                    </li>
                                     <!-- <li>
                                         <a href="#blog-section">Blog</a>
                                     </li> -->
@@ -945,18 +948,22 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
     <!-- Start clients section -->
     <section class="clients-section">
         <div class="container">
+            <div class="home-contact">
+                <h2 class="text-center">Clients</h2>
+                <p class="text-center">Our happy clients</p>
+            </div>
             <div class="row clients-wrap">
                 <div class="col-lg-3 col-md-6 col-sm-6 single-client">
-                    <img class="img-fluid" src="img/logo/logo1.png" alt="">
+                    <img class="img-fluid" src="img/spa.jpg" alt="">
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 single-client">
-                    <img class="img-fluid" src="img/logo/logo2.png" alt="">
+                    <img class="img-fluid" src="img/ts.png" alt="">
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 single-client">
-                    <img class="img-fluid" src="img/logo/logo3.png" alt="">
+                    <img class="img-fluid" src="img/texcoms.png" alt="">
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 single-client">
-                    <img class="img-fluid" src="img/logo/logo4.png" alt="">
+                    <img class="img-fluid" src="img/wemax.jpg" alt="" width="180px">
                 </div>
             </div>
             <div class="row contact-wrap align-items-center justify-content-between">
@@ -980,7 +987,7 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
 
     <!-- Start contact section -->
     <section class="contact-section contact-page-section padding-top-120" id="contact-section">
-        <div class="container">
+        <div class="container" id="contact">
             <div class="home-contact">
                 <h2 class="text-center">Contact With Us</h2>
                 <p class="text-center">Drop Us a Line</p>
@@ -1048,7 +1055,8 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                         </li>
                     </ul>
                     <ul class="footer-menu">
-                        <li>
+                        <p>Office Address: <br> 203/204, Road: 35, Block- Ta, Mirpur-6, Dhaka, Bangladesh</p>
+                        <!-- <li>
                             <a href="#">Affiliate Program</a>
                         </li>
                         <li>
@@ -1059,7 +1067,7 @@ User Interface (UI) and User Experience (UX) design is a most important part of 
                         </li>
                         <li>
                             <a href="#">Refund Policy</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
